--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" width="device-width, inicial-scale=1.0">
+    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin dockland and Phoenix park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, sport, exercise">
     <title>Love Running</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
