--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/apple-touch-icon.png">
 </head>
 <body>
+    <!--Header-->
+    <header>
+Header 
+    </header>
+    <!--Main content-->
+    <main>
+Main Content 
+    </main>
+    <!--Footer-->
+    <footer>
+Footer
+    </footer>
 
 
 </body>
