--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/apple-touch-icon.png">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
     <!--Header-->
