--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-labek="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            
+
+        </ul>
+    </footer>
+    <!--Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/378cfbc72c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
