--- a/gallery.html
+++ b/gallery.html
@@ -37,12 +37,7 @@
     </header>
 
     <!-- Main content -->
-    <main>
-        <section id="hero">
-
-        </section>
-
-    </main>
+    <main>Main content</main>
 
     <!-- Footer -->
     <footer>
