--- a/gallery.html
+++ b/gallery.html
@@ -26,10 +26,12 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
@@ -39,33 +41,51 @@
     <!-- Main content -->
     <main>
         <section id="gallery">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
-            <img src="assets/images/athletes.webp" alt="Two atheletes running together">
-            <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
-            <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
-            <img src="assets/images/man.webp" alt="Man at charity paint running festival">
-            <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
-            <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
-            <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
-            <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
-            <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
-            </div> 
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-labek="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-labek="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-labek="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-labek="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-
-
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
-    <!--Font Awesome kit-->
-    <script src="https://kit.fontawesome.com/378cfbc72c.js" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
