--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
@@ -38,48 +40,52 @@
 
     <!-- Main content -->
     <main>
+        <!-- Hero section -->
         <section id="hero">
-        <div id="cover-text">
-            <h2>Love Running</h2>
-            <h3>Dublin Docklands & Phoenix Park</h3>
-        </div>
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
         </section>
+
+        <!-- Reasons section -->
         <section id="reasons">
-        <h2>Why Love Running With Us?</h2>
-        <div id="benefits">
-            <div id="benefits-physical">
-                <div>
-                    <h3>FEEL HEALTHY <i class="fa-solid fa-heart-pulse"></i></h3>
-                    <hr>
-                    <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns
-                        calories and can build strength.</p>
+            <h2>Why love running with us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+                        <hr>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
+                    </div>
+                    <div>
+                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
+                    </div>
                 </div>
-                <div>
-                    <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
-                    <hr>
-                    <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
+                <div id="benefits-mental">
+                    <div>
+                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+                        <hr>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
+                    </div>
+                    <div>
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
+                    </div>
+                </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg"></div>
                 </div>
             </div>
-            <div id="benefits-mental">
-                <div>
-                 <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>  
-                 <hr>
-                 <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic,
-                more awake and, yes, happier.</p> 
-                </div>
-                <div>
-                <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3> 
-                <hr> 
-                <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or
-                low mood, and inspire you to try new events.</p> 
-                </div>
-            </div>
-            <div id="benefits-image">
-                <div id="circle-cover-bg"></div>
-            </div>
-        </div>
         </section>
-        <!-- Meetup Times section -->
+
+        <!-- Meetup times section -->
         <section id="meetups">
             <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
@@ -125,16 +131,31 @@
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-labek="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-labek="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-labek="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-labek="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-
-
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
-    <!--Font Awesome kit-->
-    <script src="https://kit.fontawesome.com/378cfbc72c.js" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
