--- a/signup.html
+++ b/signup.html
@@ -26,12 +26,14 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -39,51 +41,64 @@
     <!-- Main content -->
     <main>
         <section id="signup">
-        <form id="signup-form" action="https://formdump.codeinstitute.net" method="POST">
-            <h2><i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!</h2>
-            <label for="first_name">First Name</label>
-            <input type="text" name="first_name" id="first_name" class="text-input" required>
-            <br>
-            <label for="last_name">Last Name</label>
-            <input type="text" id="last_name" name="last_name" class="text-input" required>
-            <br>
-            <label for="email_address">Email Address</label>
-            <input for="email_address" id="email_address" name="email_address" class="text-input" required>
-            <br>
-            <div class="radio-buttons">
-                <div>
-                    <label for="road">Road</label>
-                    <input type="radio" name="running_preference" id="road" value="road" required checked>
-                </div>
-                <div>
-                    <label for="trail">Trail</label>
-                    <input type="radio" name="running_preference" id="trail" value="trail" required>
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" class="text-input" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" class="text-input" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="email" name="email_address" id="email_address" class="text-input" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
                     </div>
                 </div>
-               
-                <div>
-                   <label for="both">Both</label>
-                   <input type="radio" name="running_preference" id="both" value="both" required>
-                </div>
                 <button type="submit" class="join-button">Let's Run!</button>
-            </div>
-        </form>
+            </form>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-labek="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-labek="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-labek="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-labek="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-
-
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
-    <!--Font Awesome kit-->
-    <script src="https://kit.fontawesome.com/378cfbc72c.js" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
